# denoiser

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
denoiser/: audio_processing.py  main.py
docs/adr/: 0001-initial-decisions.md
tests/: test_audio_processing.py  test_placeholder.py
