[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "denoiser"
version = "0.1.0"
description = ""
authors = [{name = "Michael George"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "noisereduce>=3.0.3",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
    "moviepy>=2.2.1",
    "typer>=0.9.0",
    "numpy>=2.4.4"
]

[project.scripts]
denoiser = "denoiser.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 64
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
